# multicosim-greensight

./: .gitmodules  README.md  docker-bake.hcl  pyproject.toml
gazebo/models/iris_with_battery/: model.config
low-fid-sim/: Dockerfile  current_env.txt  drone_specs.json  optflowattackdrone.py
low-fid-sim/figures/: falsification_region_demo_data.csv
low-fid-sim/generated_fmus/: GSQuad.Components.Controller.fmu  GSQuad.Components.Controller_high_fid.fmu  GSQuad.Components.Joystick.fmu  GSQuad.Components.MissionPlanner.fmu  GSQuad.Components.Quadrotor.fmu  GSQuad.Components.Quadrotor_high_fid.fmu
sitl/: Dockerfile  ardupilot-default-config.param  firmware.Dockerfile  gazebo.Dockerfile  imu.Dockerfile  mavsdk.patch  pyproject.toml
sitl/models/gs_drone/: model.sdf
sitl/models/iris_with_battery/: model.sdf
sitl/models/iris_with_standoffs/: model.sdf
sitl/src/: gcs.py  imu.py  mavlink.py
sitl/worlds/: iris_battery.sdf
src/greensight/: casadi.py  dronesim2.py  sitl.py
src/greensight/dronesim2/: __init__.py  wrapper.py
tests/: imu_attack.py
