[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"

[project]
name = "multicosim-greensight"
version = "0.1.0"
authors = [
    { name = "Quinn Thibeault", email = "quinn.thibeault96@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "casadi>=3.7.1",
    "click>=8.2.1",
    "matplotlib>=3.10.5",
    "multicosim",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "psy-taliro>=1.0.0",
    "scipy>=1.16.1",
]

[tool.uv.build-backend]
module-name = "greensight"

[tool.uv.sources]
multicosim = { git = "https://github.com/cpslab-asu/multicosim", rev = "main" }

[tool.pyright]
venvPath = "."
venv = ".venv"
