[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"

[project]
name = "multicosim-greensight"
version = "0.1.0"
authors = [
    { name = "Quinn Thibeault", email = "quinn.thibeault96@gmail.com" }
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "altair>=5.5.0",
    "casadi>=3.7.1",
    "click>=8.2.1",
    "matplotlib>=3.10.5",
    "multicosim",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "psy-taliro>=1.0.0",
    "scipy>=1.11.1",
]

[tool.uv.build-backend]
module-name = "greensight"

[tool.uv.sources]
multicosim = { git = "https://github.com/cpslab-asu/multicosim", rev = "0198fc0f573365b7ec7838b3a0261e20ae4323f5" }

[tool.pyright]
venvPath = "."
venv = ".venv"
