[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"

[project]
name = "multicosim-greensight"
version = "0.1.0"
authors = [
    { name = "Quinn Thibeault", email = "quinn.thibeault96@gmail.com" }
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "casadi>=3.7.1",
    "matplotlib>=3.10.5",
    "multicosim",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "scipy>=1.11.1",
]

[dependency-groups]
tests = [
    "click>=8.2.1",
    "plotly>=6.3.0",
    "psy-taliro>=1.0.0",
    "rich>=14.1.0",
]

[tool.uv.build-backend]
module-name = "greensight"

[tool.uv.sources]
multicosim = { git = "https://github.com/cpslab-asu/multicosim", branch = "main" }

[tool.pyright]
venvPath = "."
venv = ".venv"

