[project]
name = "sitl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.2.1",
    "rich>=14.1.0",
]

[dependency-groups]
imu = [
    "multicosim",
]
gcs = [
    "mavsdk>=3.10.0",
    "pymavlink>=2.4.49",
]
dev = [
    "multicosim-greensight",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.uv.sources]
multicosim-greensight = { path = "../", editable = true }
